--- a/src/css/card.css
+++ b/src/css/card.css
@@ -2,11 +2,12 @@
 .card,
 Card 
 {
+  transform: translate(29%, -23em);
+  z-index: 2;
   height: fit-content;
   width: fit-content;
   position: fixed;
-  z-index: 1;
-  padding: 1em;
+  padding: 5em 1em 3em 1em;
   transition: 0.5s ease;
   display: flex;
   flex-direction: column;
