--- a/src/style.css
+++ b/src/style.css
@@ -16,4 +16,13 @@ body {
   text-align: center;
     width: 100%;
 }
-
+.banner {
+  width: 100%;
+  height: 30em;
+  background-image: url('./images/navy4.png');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  filter: blur(4px); 
+  -webkit-filter: blur(4px);
+}
